cc/test/begin_frame_source_test.cc
@@ -35,7 +35,7 @@ const BeginFrameArgs MockBeginFrameObserver::kDefaultBeginFrameArgs =
         FROM_HERE_WITH_EXPLICIT_FUNCTION(
             "MockBeginFrameObserver::kDefaultBeginFrameArgs"),
 #endif
-        0,
+        UINT32_MAX,
         BeginFrameArgs::kStartingFrameNumber,
         -1,
         -1,
